# oc_log_helper

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml
oc_log_helper/: __init__.py  add_toggl_entry.py  main.py  start_toggl_tracking.py  toggl.py
tests/: test_cli_template.py
