[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "oc_log_helper"
authors = [{name = "0x29a", email = "nk0d6bxt@anonaddy.me"}]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
  "click==8.0.3",
  "pendulum==2.1.2",
  "vext==0.7.6",
  "vext.gi==0.7.4",
  "togglCli==2.4.3",
]

[project.urls]
Home = "https://github.com/0x29a/oc_log_helper"

[project.scripts]
oc_log_helper = "oc_log_helper.main:cli"
